# gemma4_pytorch_claude

./: COMPARE.md  README.md  attention.py  audio_encoder.py  config.py  convert.py  factory.py  generate.py  layers.py  load.py  model.py  moe.py  pyproject.toml  tokenizer.py  transformer.py  vision_encoder.py
src/gemma4/: __init__.py  attention.py  config.py  convert.py  factory.py  generate.py  layers.py  load.py  moe.py  tokenizer.py  transformer.py
src/gemma4_pt_claude/: __init__.py  attention.py  audio_encoder.py  audio_processing.py  composer.py  config.py  convert.py  factory.py  generate.py  image_processing.py  layers.py  load.py  model.py  moe.py  tokenizer.py  transformer.py  vision_encoder.py
tests/: test_attention.py  test_audio_encoder.py  test_audio_processing.py  test_config.py  test_layers.py  test_load.py  test_model.py  test_moe.py  test_multimodal.py  test_transformer.py  test_vision_encoder.py
